--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Dashboard#index</h1>
-<p>Find me in app/views/dashboard/index.html.erb</p>
+<h1>Google Vision API Example</h1>
+
+<div style="display: flex;">
+  <div style="width: 50%">
+    <%= form_tag dashboard_import_image_path, id: 'image_upload_form', multipart: true, class: 'form', remote: true do %>
+
+      <div>
+        <%= text_field_tag :image_url, nil,  autocomplete:"disable", placeholder:"Enter URL", id: 'image_url', style:"width: 400px;" %>
+      </div>
+      <div>
+        OR
+      </div>
+      <div>
+        <%= file_field_tag :file, id: "imgInp", style: "margin:auto;", class: "imported_file", accept: "image/*" %>
+      </div>
+
+      <button type="submit" style="margin: 0px">SUBMIT</button>
+    <% end %>
+
+    <div id="image_container">
+      <%= render partial: "shared/image_view" %>
+    </div>
+  </div>
+</div>
