Added image list view to display submitted images

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -21,4 +21,8 @@
       <%= render partial: "shared/image_view" %>
     </div>
   </div>
+
+  <div id="image_list_container" style="width: 50%">
+    <%= render partial: "shared/image_list"%>
+  </div>
 </div>
