Updated view to partially render list view

--- a/app/views/dashboard/import_image.js.erb
+++ b/app/views/dashboard/import_image.js.erb
@@ -1,2 +1,4 @@
 alert('Image submitted successfully!')
 $('#image_container').html("<%= j (render 'shared/image_view') %>");
+
+$('#image_list_container').html("<%= j (render 'shared/image_list') %>");
