--- a/app/views/shared/_image_view.html.erb
+++ b/app/views/shared/_image_view.html.erb
@@ -1,14 +1,20 @@
-<h5 style="margin-top: 15px;">Selected Image</h5>
-<div class="image_container">
-  <img class="image_view" id="blah" src="<%= @image_path%>" alt="Image will be displayed here" />
-</div>
-<h5 style="margin-top: 15px;">Selected Image Text</h5>
-<div class="text_container">
-  <% unless @image_text_array.blank?%>
-    <% @image_text_array.each do |text|%>
-      <p><%= text%></p>
-    <%end%>
-  <%end%>
+<div style="display:flex">
+  <div style="width: 50%">
+    <h3 style="margin-top: 15px;">Selected Image</h3>
+    <div class="image_container">
+      <img class="image_view" id="blah" src="<%= @image_path%>" alt="Image will be displayed here" />
+    </div>
+  </div>
+  <div style="width: 50%">
+    <h3 style="margin-top: 15px;">Selected Image Text</h3>
+    <div class="text_container">
+      <% unless @image_text_array.blank?%>
+        <% @image_text_array.each do |text|%>
+          <p><%= text%></p>
+        <%end%>
+      <%end%>
+    </div>
+  </div>
 </div>
 
 <style>
@@ -28,6 +34,6 @@
 
   .text_container{
     background-color: gray;
-    height: 300px;
+    margin: 15px;
   }
 </style>
