Updated table header names

--- a/app/views/dashboard/image_list.html.erb
+++ b/app/views/dashboard/image_list.html.erb
@@ -3,8 +3,8 @@
   <table class="index_table">
     <thead>
     <tr> 
-      <th>ID</th>
-      <th>Image Name</th> 
+      <th>Image</th>
+      <th>Text Detected From The Image</th> 
     </tr> 
     </thead>
     <tbody>
