Added loader to inform user about the background process

--- a/app/views/dashboard/import_image.js.erb
+++ b/app/views/dashboard/import_image.js.erb
@@ -1,2 +1,3 @@
+$('.loading_spiner').hide();
 alert('Image submitted successfully!')
 $('#image_container').html("<%= j (render 'shared/image_view') %>");
